--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --write .",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "author": "Francesco Cristini",
   "license": "ISC",
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/node": "^18.7.16",
     "jest": "^29.0.2",
     "prettier": "2.7.1",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "typescript": "^4.8.3"
   }
 }
