--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
@@ -20,6 +21,7 @@
     "jest": "^29.0.2",
     "prettier": "2.7.1",
     "supertest": "^6.2.4",
+    "ts-jest": "^29.0.0",
     "typescript": "^4.8.3"
   }
 }
