--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "node",
   "version": "1.0.0",
   "description": "node exercises",
-  "main": "index.js",
   "scripts": {
     "format": "prettier --write .",
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "build:dev": "tsc --watch",
+    "start": "node --enable-source-maps dist/server.js",
+    "start:dev": "nodemon --watch dist/",
+    "dev": "npm run build && concurrently 'npm:build:dev' 'npm:start:dev'"
   },
   "author": "Francesco Cristini",
   "license": "ISC",
@@ -17,9 +20,11 @@
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "concurrently": "^7.4.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.0.2",
+    "nodemon": "^2.0.19",
     "prettier": "2.7.1",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.0",
