Node.js pt.2 ex1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
   "outDir": "./dist",
   "sourceMap": true
  },
- "include": ["./**/*.ts"],
+ "include": ["./**/*.ts", "log the data/example.js"],
  "exclude": ["./**/*.test.ts"]
 }
