--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-json-validator-middleware": "^3.0.1",
     "jest-mock-extended": "^3.0.1",
     "zod": "^3.19.1"
   }
