--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "build:dev": "tsc --watch",
     "start": "node --enable-source-maps dist/server.js",
     "start:dev": "nodemon --watch dist/ --watch .env",
-    "dev": "npm run build && concurrently 'npm:build:dev' 'npm:start:dev'"
+    "dev": "npm run build && concurrently 'npm:build:dev' 'npm:start:dev'",
+    "web": "serve -p 8080 web/"
   },
   "author": "Francesco Cristini",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
@@ -28,12 +30,14 @@
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
     "prisma": "^4.3.1",
+    "serve": "^14.0.1",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.0",
     "typescript": "^4.8.3"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
