--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.16",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
@@ -43,6 +44,7 @@
     "express-async-errors": "^3.1.1",
     "express-json-validator-middleware": "^3.0.1",
     "jest-mock-extended": "^3.0.1",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.19.1"
   }
 }
